优化解决方法